--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
     <img src="https://www.imgambarku.com/09/03/2024/asia777-slot-apk-m0MOi1.jpg" alt="UNLOCK BET KECIL promo" width="80%" style="border-radius:20px; border: 2px #acf7ff solid;"/>
     <br>
     <div class="btn-container">
-      <a href="https://heylink.me/unlockbetkecil"><button class="btn">DAFTAR ID SPESIAL</button></a>
-      <a href="https://heylink.me/unlockbetkecil"><button class="btn">UNLOCK FITUR MAXWIN</button></a>
+      <a href="https://heylink.me/Unlockbetkecil"><button class="btn">DAFTAR ID SPESIAL</button></a>
+      <a href="https://heylink.me/Unlockbetkecil"><button class="btn">UNLOCK FITUR MAXWIN</button></a>
     </div><br>
    
     <div class="site-description">
